# freenect-rs-examples

./: .gitignore  Cargo.toml
examples/: app.rs  main.rs
