[package]
name = "libfreenect-example"
version = "0.1.0"
authors = ["Roman Bartusiak <riomus@gmail.com>"]

[dependencies]
libc = "0.2.11"
libfreenect= { git = "https://github.com/riomus/freenect-rs.git", rev = "1a245bd" }
image = "0.9.0"
piston_window = "0.44.0"
piston = "0.20.0"
piston2d-graphics = "0.16.0"
pistoncore-glutin_window = "0.25.0"
piston2d-opengl_graphics = "0.28.0"

[[bin]]
name = "example"
path = "examples/main.rs"
